force-app/main/default/objects/PWChrono_Payslip_Delivery__c/PWChrono_Payslip_Delivery__c.object-meta.xml
<CustomObject>
    <description
  >Auditable record of each salary-slip email delivery attempt.</description>
    <label>Payslip Delivery</label>
    <nameField>
        <displayFormat>DEL-{000000}</displayFormat>
        <label>Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslip Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>