force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Cc_Email_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Cc_Email_Snapshot__c</fullName>
    <description
  >Approved CC recipient retained for delivery audit.</description>
    <label>CC Email Snapshot</label>
    <type>Email</type>
</CustomField>