force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description
  >Salesforce ContentDocument identifier for the generated PDF.</description>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>