force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description
  >Salesforce ContentVersion identifier for the generated PDF.</description>
    <label>Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>