force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <description
  >Provider or Salesforce message identifier when available.</description>
    <label>Email Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>