force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description
  >Sanitized failure detail retained for payroll administrators.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>