force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Unique request key preventing accidental duplicate delivery.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>