force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Recipient_Email_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Snapshot__c</fullName>
    <description
  >Server-resolved recipient retained for delivery audit.</description>
    <label>Recipient Email Snapshot</label>
    <required>true</required>
    <type>Email</type>
</CustomField>