force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <label>Requested At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>