force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Payslip Deliveries</relationshipLabel>
    <relationshipName>Requested_Payslip_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>