force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Salary_Slip__c.field-meta.xml
<CustomField>
    <fullName>Salary_Slip__c</fullName>
    <label>Salary Slip</label>
    <referenceTo>PWChrono_Salary_Slip__c</referenceTo>
    <relationshipLabel>Payslip Deliveries</relationshipLabel>
    <relationshipName>Payslip_Deliveries</relationshipName>
    <type>MasterDetail</type>
</CustomField>