force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sent Payslip Deliveries</relationshipLabel>
    <relationshipName>Sent_Payslip_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>