force-app/main/default/objects/PWChrono_Payslip_Delivery__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>Queued</fullName><default>true</default><label
        >Queued</label></value>
        <value><fullName>Sent</fullName><default>false</default><label
        >Sent</label></value>
        <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
        <value><fullName>Cancelled</fullName><default>false</default><label
        >Cancelled</label></value>
    </valueSetDefinition></valueSet>
</CustomField>